# new-web-cores-archive

./: README.md  docker-compose.yml  info.txt
auth/: Cargo.toml
auth/assets/: private_key.txt  private_pwd.txt  public_key.json  public_key.txt
auth/src/: main.rs  mongo.rs
cdn/: Cargo.toml
cdn/files/: file_not_found.html  index.html
cdn/src/: forms.rs  main.rs  mongo.rs
geoip/: .env  package.json  pnpm-lock.yaml  tsconfig.json
geoip/src/: hello.ts
