[package]
name = "auth"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
chrono = "0.4"
include-crypt = "0.1.1"
mongodb = "3.1.0"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.38.0", features = ["macros", "rt-multi-thread"] }

[profile.release]
lto = true
opt-level = "s"
debug = false
panic = "abort"
strip = "symbols"
codegen-units = 1